fix(docker): working version
