# fluent-verifier/fluent-verifier-server/src/server.rs
@@ -4,17 +4,11 @@ use crate::{
         wasm_verifier_actix::route_wasm_verifier, // http
         wasm_verifier_server::WasmVerifierServer, // grpc
     },
-    services::{
-        HealthService, FluentWasmVerifierService
-    },
+    services::{HealthService, FluentWasmVerifierService},
     settings::Settings,
 };
-use blockscout_service_launcher::{
-    launcher, launcher::LaunchSettings, tracing};
+use blockscout_service_launcher::{launcher, launcher::LaunchSettings, tracing};
 use std::sync::Arc;
-use tokio::sync::Semaphore;
-
-
 
 const SERVICE_NAME: &str = "fluent_verifier";
 
@@ -28,9 +22,7 @@ impl Router {
     pub fn grpc_router(&self) -> tonic::transport::server::Router {
         tonic::transport::Server::builder()
             .add_service(HealthServer::from_arc(self.health.clone()))
-            .add_service(
-                WasmVerifierServer::from_arc(self.wasm_verifier.clone()),
-            )
+            .add_service(WasmVerifierServer::from_arc(self.wasm_verifier.clone()))
     }
 }
 
@@ -47,15 +39,7 @@ pub async fn run(settings: Settings) -> Result<(), anyhow::Error> {
     tracing::init_logs(SERVICE_NAME, &settings.tracing, &settings.jaeger)?;
 
     let health = Arc::new(HealthService::default());
-
-    // Create the semaphore using max_concurrent_jobs from settings
-    // Ensure at least 1 concurrent job is allowed.
-    let max_jobs = settings.verification.max_concurrent_jobs;
-    let verification_semaphore = Arc::new(Semaphore::new(if max_jobs == 0 { 1 } else { max_jobs }));
-
-    let wasm_verifier = Arc::new(FluentWasmVerifierService::new(&settings, verification_semaphore.clone()).await.expect(
-        "Failed to create FluentWasmVerifierService"
-    ));
+    let wasm_verifier = Arc::new(FluentWasmVerifierService::new(settings.docker_api, settings.verification).await?);
 
     let router = Router {
         health,
